[tool.poetry]
name = "music_ai"
version = "0.1.0"
description = "Music with neural networks"
authors = ["Lorenzo Lamia <lorenzo.lamia@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scipy = "^1.8.0"
jupyterlab = "^3.3.0"
pandas = "^1.4.1"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
ipython = "^8.1.1"
pydub = "^0.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
